<resources>
    <string name="app_name">NaRatunek</string>
    <string name="na_ratunek">Na ratunek</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="help">HELP!</string>
    <string name="menu">menu</string>
    <string name="type_msg">type msg.....</string>
    <string name="type_number">type number</string>
    <string name="przyciskpomoc">Grzegorz Romaniecki
    Poniższa aplikacja zaostała stowrzona w celu zaprezentowania w działaniu IDE Android Studio, oraz pokazaniu możliwości jakie ono zapewnia.
    Klikając w przycisk "MENU" mamy możliwość przejścia do widoku, który odpowiada za zmianę wcześniej predefiniowanych ustawień.
    Wszystkie zmienne wpisane w tamtym widoku są przechowywane w "SharedPreferences" i są w bardzo łatwy sposób zapisywane w pamięci telefonu w postaci plików .xml.
    </string>

    <string name="wiadomosc">UWAGA!!! Proszę do mnie zadzwonić - sytuacja awaryjna</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="powr_t">Powrót</string>
    <string name="edytuj_numery_os_b_kontaktowych">Edytuj numery osób kontaktowych</string>
    <string name="sposob">SPOSÓB DZIAŁANIA: Po naciśnięciu przycisku "HELP!" rozpoczyna się procedura alarmowa.
    Do pięciu wcześniej zdefiniowanych kontaktów zostanie wysłana wiadomość SMS o treści wcześniej zdefiniowanej
    przez użytkownika. </string>
    <string name="_2022_grzegorz_romaniecki_ahe_w_odzi_oddzia_w_widnicy">2022 Grzegorz Romaniecki AHE w Łodzi oddział w Świdnicy</string>
</resources>